Li Ruan HW2_Python

--- a/Python_Intro_1.ipynb
+++ b/Python_Intro_1.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -58,14 +58,14 @@
      "output_type": "stream",
      "text": [
       "s a\n",
-      "pa pam spa\n"
+      "p pam spa\n"
      ]
     }
    ],
    "source": [
     "s = 'spam'                #Define s as a char\n",
     "print(s[0], s[-2])        #Print the first and second last character of s\n",
-    "print(s[1:3], s[1:], s[:-1]) #Print the second to third character of s; the second to the last character of s; the first to the second last of s"
+    "print(s[1:2], s[1:], s[:-1]) #Print the second to third character of s; the second to the last character of s; the first to the second last of s"
    ]
   },
   {
