HW3_Python (with comments) Li Ruan

--- a/HW3_python.ipynb
+++ b/HW3_python.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -36,9 +36,9 @@
    "source": [
     "def histogram(a):\n",
     "    for i in range(0,len(a)):\n",
-    "        c=''\n",
+    "        c=''                     #define a blank string \n",
     "        for j in range(0,a[i]):\n",
-    "            c=c+'*'\n",
+    "            c=c+'*'              #print * a[i] times\n",
     "        print(c)\n",
     "\n",
     "histogram([4, 9, 7,10,15])"
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -64,7 +64,7 @@
        "210"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +74,7 @@
     "    mx=0\n",
     "    for i in range(0,len(a)):\n",
     "        if(mx<a[i]):\n",
-    "            mx = a[i]\n",
+    "            mx = a[i]   #always let mx be the largest one \n",
     "            \n",
     "    return mx\n",
     "    \n",
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -107,7 +107,7 @@
     "def maps(a):\n",
     "    b=a\n",
     "    for i in range(0,len(a)):\n",
-    "        b[i]=len(a[i])\n",
+    "        b[i]=len(a[i])      #Let the number in b is the length of words in a \n",
     "        \n",
     "    print(b)\n",
     "    \n",
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -135,7 +135,7 @@
        "6"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,9 +143,9 @@
    "source": [
     "def find_longest_word(a):\n",
     "    b=0\n",
-    "    for i in range(0,len(a)):\n",
+    "    for i in range(0,len(a)):        # combine question 2&3\n",
     "        if(len(a[i])>b):\n",
-    "            b=len(a[i])\n",
+    "            b=len(a[i])    # always let b be the largest number in the length of the words in a \n",
     "        \n",
     "    return b;\n",
     "           \n",
@@ -179,7 +179,7 @@
     "    b=[]\n",
     "    for i in range(0,len(a)):\n",
     "        if(len(a[i])>n):\n",
-    "            b.append(a[i])\n",
+    "            b.append(a[i])     #add the word a[i] to b\n",
     "            \n",
     "    print(b)\n",
     "    \n",
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -206,7 +206,7 @@
        "True"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,17 +216,17 @@
     "    a=a.lower()\n",
     "    c=[]\n",
     "    i=1\n",
-    "    while i<=26:          \n",
-    "        c.append(chr(ord('a') + i-1))\n",
+    "    while i<=26:                   #produce a list of alphabet : abcdefgh``````\n",
+    "        c.append(chr(ord('a') + i-1)) \n",
     "        i = i+1\n",
     "    \n",
     "    b=''\n",
     "    l=len(a)-1\n",
-    "    while l>=0:\n",
+    "    while l>=0:                  # record a into a non-upper, non-punctuation, non-spacing list, say b\n",
     "        if(a[l] in c):\n",
     "            b=b+a[l]\n",
     "        l=l-1\n",
-    "    if(b==b[::-1]):\n",
+    "    if(b==b[::-1]):               # determine if b is palindrome, say true; otherwise, say false\n",
     "        return True\n",
     "    else:\n",
     "        return False\n",
@@ -244,25 +244,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 1, 1, 1, 3, 1, 1, 2, 1, 1, 1, 1, 1, 1, 4, 1, 1, 2, 1, 2, 2, 1, 1, 1, 1, 1]\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "True"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,17 +265,17 @@
     "    a=a.lower()\n",
     "    c=[]\n",
     "    i=1\n",
-    "    while i<=26:          \n",
+    "    while i<=26:                        #produce a list of alphabet : abcdefgh``````\n",
     "        c.append(chr(ord('a') + i-1))\n",
     "        i = i+1\n",
     "    b = [0]*26\n",
     "    for i in range(0,len(a)):\n",
     "        if(a[i] in c):\n",
-    "            b[ord(a[i])-ord('a')] +=1\n",
-    "    #print(b)\n",
+    "            b[ord(a[i])-ord('a')] +=1   # if a character occurs, the corresponding location in b will plus 1 \n",
+    "    #print(b)           \n",
     "    bl=True\n",
     "    for i in range(0,26):\n",
-    "        if(b[i]==0):\n",
+    "        if(b[i]==0):                     # determine if list b has number 0, if yes, it is false, if not, it is true.\n",
     "            bl=False\n",
     "    return bl\n",
     "pangram('The quick brown fox jumps over the lazy dog')"
@@ -610,7 +603,7 @@
     "i = 99\n",
     "while i>=1:\n",
     "    print(str(i)+ ' bottles of coke on the wall, '+str(i)+' bottles of coke.')\n",
-    "    i -= 1\n",
+    "    i -= 1      # use loop to make the long verses\n",
     "    print('Take one down, pass it around, '+str(i)+' bottles of coke on the wall.'+'\\n')\n",
     "    \n",
     "    "
@@ -625,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -636,19 +629,21 @@
        "'god jul och gott nytt år '"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def translate(l):\n",
-    "    a = {\"merry\":\"god\", \"christmas\":\"jul\", \"and\":\"och\", \"happy\":\"gott\", \"new\":\"nytt\", \"year\":\"år\"} \n",
+    "    a = {\"merry\":\"god\", \"christmas\":\"jul\", \"and\":\"och\", \"happy\":\"gott\", \"new\":\"nytt\", \"year\":\"år\"}  # define a dictionary\n",
     "    c = ''\n",
     "    for i in range(0,len(l)):\n",
-    "        c = c + a[l[i]]+\" \"\n",
+    "        c = c + a[l[i]]+\" \"  #let c be the translated words\n",
     "    return c\n",
-    "translate(['merry','christmas','and','happy','new','year'])"
+    "translate(['merry','christmas','and','happy','new','year'])\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -702,7 +697,7 @@
     }
    ],
    "source": [
-    "def char_freq(a):\n",
+    "def char_freq(a):          # the principle is similar to question 7\n",
     "    a=a.lower()\n",
     "    c=[]\n",
     "    i=1\n",
@@ -722,13 +717,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Question 11"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -736,6 +724,13 @@
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Question 11"
+   ]
   },
   {
    "cell_type": "code",
@@ -816,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -827,7 +822,7 @@
        "'This is very funny and cool. Indeed!'"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -837,10 +832,10 @@
     "    l = len(a)\n",
     "    while l >= 0:\n",
     "        l = l - 1\n",
-    "        if(a[l]==' ' and a[l-1]==' '):\n",
+    "        if(a[l]==' ' and a[l-1]==' '):  # replace the first '  ' into ' '\n",
     "            a = a.replace('  ', ' ', 1)\n",
     "            \n",
-    "        elif a[l]=='.' and a[l+1]!=' ':\n",
+    "        elif a[l]=='.' and a[l+1]!=' ':  # replace the first '.' into '. '\n",
     "            a = a.replace('.', '. ', 1)\n",
     "    return a\n",
     "correct(\"This  is very funny and  cool.Indeed!\")"
@@ -874,9 +869,9 @@
    "source": [
     "def make_3sg_form(a):\n",
     "    if(a.endswith('y')):\n",
-    "        a = a[:len(a)-1]+'ies'\n",
+    "        a = a[:len(a)-1]+'ies'   # if word end with y, eliminate y and add 'ies'\n",
     "    elif(a.endswith('o')|a.endswith('ch')|a.endswith('s')|a.endswith('sh')|a.endswith('x')|a.endswith('z')):\n",
-    "        a = a + 'es'\n",
+    "        a = a + 'es'           # if word end in the ways above, add 'es'\n",
     "    else:\n",
     "        a = a + 's'\n",
     "    return a\n",
@@ -910,7 +905,8 @@
     }
    ],
    "source": [
-    "def myVol(a):\n",
+    " # It is a more complicated case of question 13. This time we will distinguish more cases.\n",
+    "def myVol(a):  \n",
     "    a = a.lower()\n",
     "    if a == 'a'or a=='e'or a=='i'or a=='o'or a=='u':\n",
     "        return True\n",
@@ -921,11 +917,17 @@
     "    if(a=='be'or a=='see'or a=='flee'or a=='knee'):\n",
     "        a = a + 'ing'\n",
     "    elif(myVol(a[len(a)-1])==False and myVol(a[len(a)-2])==True and myVol(a[len(a)-3])==False):\n",
-    "        a = a + a[len(a)-1]+'ing'\n",
+    "        a = a + a[len(a)-1]+'ing'   \n",
+    "        #For words consisting of consonant-vowel-consonant, double the final letter before adding ing\n",
+    "\n",
     "    elif(a.endswith('ie')):\n",
     "        a = a[:len(a)-2]+'ying'\n",
+    "        #If the verb ends in ie, change ie to y and add ing\n",
+    "        \n",
     "    elif(a.endswith('e')):\n",
     "        a = a[:len(a)-1]+'ing'\n",
+    "        #If the verb ends in e, drop the e and add ing\n",
+    "        \n",
     "    else:\n",
     "         a = a+'ing'\n",
     "    return a\n",
