--- a/Python_Intro_1.ipynb
+++ b/Python_Intro_1.ipynb
@@ -33,10 +33,10 @@
     }
    ],
    "source": [
-    "print(2+56+84+65498+21+22) #Python can be used as a powerful calculator.\n",
+    "print(2+56+84+65498+21+22) # Python can be used as a powerful calculator.\n",
     "print(2**8)                # \"**\" means power\n",
-    "print(pow(2,8))            #Same as \"**\"\n",
-    "print((1+4)*(9-6))"
+    "print(pow(2,8))            # Same as \"**\"\n",
+    "print((1+4)*(9-6))         # Calculate this function : (1+4)*(9-6)."
    ]
   },
   {
@@ -63,10 +63,9 @@
     }
    ],
    "source": [
-    "s = 'spam'                #Define s as a char\n",
-    "# SW: this assigns the string 'spam' to the variable s\n",
-    "print(s[0], s[-2])        #Print the first and second last character of s\n",
-    "print(s[1:2], s[1:], s[:-1]) #Print the second to third character of s; the second to the last character of s; the first to the second last of s"
+    "s = 'spam'                # Assign the string 'spam' to the variable s.\n",
+    "print(s[0], s[-2])        # Print the first and second last character of s\n",
+    "print(s[1:2], s[1:], s[:-1]) # Print the second to third character of s; the second to the last character of s; the first to the second last of s"
    ]
   },
   {
@@ -396,16 +395,16 @@
     }
    ],
    "source": [
-    "import sys #Load the sys library\n",
-    "help(sys)  #Use help() to learning how to use a specific module\n",
-    "import os #Load the os library\n",
-    "import re #Load regular expression pattern matching library\n",
+    "import sys # Load the sys library\n",
+    "help(sys)  # Use help() to learning how to use a specific module\n",
+    "import os # Load the os library\n",
+    "import re # Load regular expression pattern matching library\n",
     "\n",
-    "print(os.getcwd())    #get the location of the module\n",
-    "# SW: print the current working directory\n",
-    "#print(sys.getcwd())\n",
-    "print(sys.platform)\n",
-    "# SW: print the system platform"
+    "print(os.getcwd())   \n",
+    "# print the current working directory\n",
+    "# print(sys.getcwd())\n",
+    "print(sys.platform)   \n",
+    "# print the system platform"
    ]
   },
   {
@@ -751,17 +750,17 @@
    "outputs": [],
    "source": [
     "import urllib.request\n",
-    "# SW: Load the urllib.request module\n",
+    "# Load the urllib.request module\n",
     "r = urllib.request.urlopen('https://github.com/gerhardpilcher/2015Fall510/raw/master/2015%20FALL%20510%20Course%20Schedule.pdf')\n",
-    "# SW: Open the course schedule on GitHub and assign the results to the variable r\n",
+    "# Open the course schedule on GitHub and assign the results to the variable r\n",
     "myfile = open('/Users/ruanli/GitHub/Fall510/Schedule.pdf', 'wb')\n",
-    "# SW: Create a file on the host operating system\n",
-    "# SW: Specify the 'w' option so the file is writable\n",
-    "# SW: Specify the 'b' option because the file type is PDF (not purely text) \n",
+    "# Create a file on the host operating system\n",
+    "# Specify the 'w' option so the file is writable\n",
+    "# Specify the 'b' option because the file type is PDF (not purely text) \n",
     "myfile.write(r.read())\n",
-    "# SW: Read the file into memory and write it to myfile\n",
+    "# Read the file into memory and write it to myfile\n",
     "myfile.close()\n",
-    "# SW: Close myfile so its unlocked and available for other manipulation or other applications."
+    "# Close myfile so its unlocked and available for other manipulation or other applications."
    ]
   },
   {
@@ -773,14 +772,15 @@
    "outputs": [],
    "source": [
     "r = urllib.request.urlopen('https://github.com/gerhardpilcher/2015Fall510/raw/master/2015%20FALL%20510%20Syllabus.pdf')\n",
-    "# SW: same comment as above\n",
+    "# Open the course syllabus on GitHub and assign the results to the variable r\n",
     "myfile = open('/Users/ruanli/GitHub/Fall510/Syllabus.pdf', 'wb')\n",
-    "# SW: same comment as above \n",
-    "#help(open)\n",
+    "# Create a file on the host operating system\n",
+    "# Specify the 'w' option so the file is writable\n",
+    "# Specify the 'b' option because the file type is PDF (not purely text) \n",
     "myfile.write(r.read())\n",
-    "# SW: same comment as above\n",
+    "# Read the file into memory and write it to myfile\n",
     "myfile.close()\n",
-    "# SW: same comment as above"
+    "# Close myfile so its unlocked and available for other manipulation or other applications."
    ]
   },
   {
@@ -814,7 +814,7 @@
    ],
    "source": [
     "title = 'Something Else' \n",
-    "# SW: Assign the string 'Something Else' to the variable title\n",
+    "# Assign the string 'Something Else' to the variable title\n",
     "print(title)"
    ]
   },
@@ -859,12 +859,13 @@
     }
    ],
    "source": [
-    "import Class_1_Module #uses Class_1_Module name space\n",
-    "dir(Class_1_Module)  #what is the meaning of dir(), and which situation shall I use it?\n",
+    "import Class_1_Module # use Class_1_Module name space\n",
+    "dir(Class_1_Module)  # what is the meaning of dir(), and which situation shall I use it?\n",
     "# SW: https://docs.python.org/3/library/functions.html#dir\n",
-    "print(Class_1_Module.title) #Module is like a class in Java, include some functions, return some variables.\n",
-    "print(Class_1_Module.MyAge)\n",
-    "help(dir)"
+    "print(Class_1_Module.title) # print the title of Class_1_Module\n",
+    "print(Class_1_Module.MyAge) # print the calcilated answer of Class_1_Module, that is, MyAge.\n",
+    "# Module is like a class in Java, include some functions, return some variables.\n",
+    "help(dir)  # Use help() to get the meaning of dir()."
    ]
   },
   {
@@ -878,17 +879,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Functions"
+    "## Show the difference in scope between importing a module and importing a specific variable from the module\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Math 510 Fall 2015\n"
+     ]
+    }
+   ],
+   "source": [
+    "#copies into local name space, overwrites same named variable\n",
+    "#without warning\n",
+    "from Class_1_Module import title \n",
+    "print(title)\n",
+    "# The title is variable, and we just import it from the Class_1_Module name space, our original definition of title \n",
+    "# is overwritten. In this way, if we want, we can assign a new name to it such as classnote or others.\n",
+    "from Class_1_Module import title as classnote\n",
+    "# for example, we can try to change the title like this."
+   ]
   },
   {
    "cell_type": "code",
