--- a/HW3_python.ipynb
+++ b/HW3_python.ipynb
@@ -11,12 +11,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "SW: overall, very good. think about defensive programming, e.g., how to handle unexpected input values. it will make debugging a lot easier."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Question 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -59,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -67,10 +74,10 @@
     {
      "data": {
       "text/plain": [
-       "210"
+       "0"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,7 +99,9 @@
     "            \n",
     "    return mx   # return the answer mx.(largest number)\n",
     "    \n",
-    "max_in_list([4, 9, 7,210,15])        # Try to test max_in_list() function. (we use [4, 9, 7,210,15] to test)"
+    "max_in_list([4, 9, 7,210,15])        # Try to test max_in_list() function. (we use [4, 9, 7,210,15] to test)\n",
+    "# SW: lost points: your function should handle lists of all negative values, but doesn't because you set mx to 0.\n",
+    "max_in_list([-1,-2]) # should return -1"
    ]
   },
   {
@@ -104,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -133,8 +142,7 @@
     "    print(b)  # Print the list b.\n",
     "    \n",
     "maps(['re ', 'efe', 'wewq','gegf','dwdwww'])\n",
-    "# Try to test maps() function. (we use ['re ', 'efe', 'wewq','gegf','dwdwww'] to test)\n",
-    "    "
+    "# Try to test maps() function. (we use ['re ', 'efe', 'wewq','gegf','dwdwww'] to test)    "
    ]
   },
   {
@@ -146,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -154,10 +162,10 @@
     {
      "data": {
       "text/plain": [
-       "6"
+       "1"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +188,9 @@
     "    return b;   # Return b : the length of the longest one.\n",
     "           \n",
     "find_longest_word(['re ', 'efe', 'wewq','gegf','dwdwww'])\n",
-    "# Try to test find_longest_word() function. (we use ['re ', 'efe', 'wewq','gegf','dwdwww'] to test)\n"
+    "# Try to test find_longest_word() function. (we use ['re ', 'efe', 'wewq','gegf','dwdwww'] to test)\n",
+    "\n",
+    "# SW: good."
    ]
   },
   {
@@ -192,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -222,8 +232,7 @@
     "    print(b)        # print list b which is a collection of the words in a that are longer than n.\n",
     "    \n",
     "filter_long_words(['re ', 'efe', 'wewq','gegf','dwdwww'],3)\n",
-    "# Try to test filter_long_words() function. (we use ['re ', 'efe', 'wewq','gegf','dwdwww'] and n=3 to test)\n",
-    "\n"
+    "# Try to test filter_long_words() function. (we use ['re ', 'efe', 'wewq','gegf','dwdwww'] and n=3 to test)"
    ]
   },
   {
@@ -235,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -247,6 +256,16 @@
       "True\n",
       "True\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -287,7 +306,9 @@
     "print(palindromes('Sit on a potato pan, Otis'))\n",
     "# Test palindromes() function by 'Sit on a potato pan, Otis'.\n",
     "# we can alsotest our function by many other examples, such as \"Lisa Bonet ate no basil\" and so on.\n",
-    "print(palindromes(\"Lisa Bonet ate no basil\"))\n"
+    "print(palindromes(\"Lisa Bonet ate no basil\"))\n",
+    "\n",
+    "# SW: good."
    ]
   },
   {
@@ -301,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -350,8 +371,7 @@
     "print(pangram('The quick brown fox jumps over the lazy dog'))\n",
     "# test the pangram() function by 'The quick brown fox jumps over the lazy dog'.\n",
     "# we can also test out function by other sentences such as \"Note that punctuation, capitalization, and spacing are usually ignored.\"\n",
-    "print(pangram(\"Note that punctuation, capitalization, and spacing are usually ignored.\"))\n",
-    "\n"
+    "print(pangram(\"Note that punctuation, capitalization, and spacing are usually ignored.\"))"
    ]
   },
   {
@@ -363,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -686,7 +706,9 @@
     "    print('Take one down, pass it around, '+str(i)+' bottles of coke on the wall.'+'\\n')\n",
     "    # the second sentence is 'Take one down, pass it around, i-1 bottles of coke on the wall.'\n",
     "    # then we also have a newline between two verses.\n",
-    "    "
+    "    \n",
+    "# SW: this is fine, but in general you would prefer to write a function that does this so that it can be called\n",
+    "#     from another part of your code."
    ]
   },
   {
@@ -698,20 +720,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'god jul och gott nytt år '"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "god jul \n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "'merry christmas'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-29-4bbeaff9aa02>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtranslate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'merry'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'christmas'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 22\u001b[0;31m \u001b[0mtranslate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'merry christmas'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-29-4bbeaff9aa02>\u001b[0m in \u001b[0;36mtranslate\u001b[0;34m(l)\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ml\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m         \u001b[0;31m# let l[i] loops through every word in distionary.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m         \u001b[0mc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mc\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0ml\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m\" \"\u001b[0m  \u001b[0;31m#let c be the translated words and paste them together with a space.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mc\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'merry christmas'"
+     ]
     }
    ],
    "source": [
@@ -733,7 +764,12 @@
     "    return c\n",
     "\n",
     "translate(['merry','christmas','and','happy','new','year'])\n",
-    "# Test translate() function by the given example: ['merry','christmas','and','happy','new','year'], and we can have a list of Swedish words. \n"
+    "# Test translate() function by the given example: ['merry','christmas','and','happy','new','year'], and we can have a list of Swedish words. \n",
+    "\n",
+    "# SW: this is fine, but think about how you want to handle unexpected input, e.g., list items that do not appear in\n",
+    "#     the dictionary. should you return them untranslated? should you print an informative error message?\n",
+    "print(translate(['merry','christmas']))\n",
+    "translate(['merry christmas'])"
    ]
   },
   {
@@ -745,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -753,10 +789,10 @@
     {
      "data": {
       "text/plain": [
-       "{'a': 7,\n",
-       " 'b': 14,\n",
-       " 'c': 3,\n",
-       " 'd': 3,\n",
+       "{'a': 0,\n",
+       " 'b': 0,\n",
+       " 'c': 0,\n",
+       " 'd': 0,\n",
        " 'e': 0,\n",
        " 'f': 0,\n",
        " 'g': 0,\n",
@@ -781,7 +817,7 @@
        " 'z': 0}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -820,7 +856,13 @@
     "    return d\n",
     "\n",
     "char_freq(\"abbabcbdbabdbdbabababcbcbab\")\n",
-    "# Test char_freq() function by the given example: \"abbabcbdbabdbdbabababcbcbab\"."
+    "# Test char_freq() function by the given example: \"abbabcbdbabdbdbabababcbcbab\".\n",
+    "\n",
+    "# SW: lost points: what about characters that are not letters, e.g., numbers and symbols? you should account for\n",
+    "#     them as well.\n",
+    "#     and, as an implementation consideration, do you always want to return counts for all possible characters even\n",
+    "#     if many or most of them are zero? \n",
+    "char_freq('123?')"
    ]
   },
   {
@@ -841,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -884,20 +926,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'Caesar cipher? I much prefer Caesar salad!'"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Caesar cipher? I much prefer Caesar salad!\n",
+      "Pnrfne pvcure? V zhpu cersre Pnrfne fnynq!\n"
+     ]
     }
    ],
    "source": [
@@ -928,7 +968,11 @@
     "      # Therefore, I use c to collect the decoded phrase and return it.\n",
     "\n",
     "decoder('Pnrfne pvcure? V zhpu cersre Pnrfne fnynq!')\n",
-    "# Test the decoder() function by the given phrase: 'Pnrfne pvcure? V zhpu cersre Pnrfne fnynq!'"
+    "# Test the decoder() function by the given phrase: 'Pnrfne pvcure? V zhpu cersre Pnrfne fnynq!'\n",
+    "\n",
+    "# SW: decoder and encoder are really the same function, right?\n",
+    "print(decoder('Pnrfne pvcure? V zhpu cersre Pnrfne fnynq!'))\n",
+    "print(decoder(decoder('Pnrfne pvcure? V zhpu cersre Pnrfne fnynq!')))"
    ]
   },
   {
@@ -940,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
@@ -948,10 +992,10 @@
     {
      "data": {
       "text/plain": [
-       "'This is very funny and cool. Indeed!'"
+       "'This is correct. a'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -977,7 +1021,12 @@
     "    return a   \n",
     "\n",
     "correct(\"This  is very funny and  cool.Indeed!\")\n",
-    "# Test the correct() function by \"This  is very funny and  cool.Indeed!\"."
+    "# Test the correct() function by \"This  is very funny and  cool.Indeed!\".\n",
+    "\n",
+    "# SW: lost points: your function does not handle the case when a string terminates in a period because of the i + 1\n",
+    "#     indexing. if the final character in the string is a period, then referencing the i + 1 character will throw\n",
+    "#     and out of bounds error.\n",
+    "correct('Correct.')"
    ]
   },
   {
@@ -989,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false
    },
@@ -1000,7 +1049,8 @@
      "text": [
       "fixes\n",
       "brushes\n",
-      "runs\n"
+      "runs\n",
+      "goes\n"
      ]
     }
    ],
@@ -1025,7 +1075,9 @@
     "# Test make_3sg_form() function with \"fix\".\n",
     "print(make_3sg_form('brush'))\n",
     "print(make_3sg_form('run'))\n",
-    "# We can also test make_3sg_form() function with \"brush\" or \"run\" and so on."
+    "# We can also test make_3sg_form() function with \"brush\" or \"run\" and so on.\n",
+    "\n",
+    "# SW: good."
    ]
   },
   {
@@ -1037,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
@@ -1101,7 +1153,9 @@
     "# Test make_ing_form() function by an example \"bad\".\n",
     "print(make_ing_form('move'))\n",
     "print(make_ing_form('lie'))\n",
-    "# We can also test make_ing_form() function with \"move\" or \"lie\" and so on."
+    "# We can also test make_ing_form() function with \"move\" or \"lie\" and so on.\n",
+    "\n",
+    "# SW: very good."
    ]
   },
   {
