--- a/HW4.Rmd
+++ b/HW4.Rmd
@@ -5,6 +5,8 @@ output: html_document
 1.
 a)
 ```{r}
+# SW: nice job on this HW
+
 c(1:20) #print a vector from 1 to 20, ie. 1,2,3,4,5,```19,20
 ```
 
