--- a/HW2_Python_revised.ipynb
+++ b/HW2_Python_revised.ipynb
@@ -90,15 +90,12 @@
     "\n",
     "fib2(100)   # Print all of the numbers less than n in Fibonacci.\n",
     "\n",
-    "# SW: nice implementation\n",
-    "# lost points: missing doc header comments\n",
-    "\n",
-    "    "
+    "# SW: nice implementation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -109,7 +106,7 @@
        "45"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,13 +125,12 @@
     "    \n",
     "mymax(23,45)      # Print the larger one.\n",
     "\n",
-    "# SW: good\n",
-    "# lost points: missing doc header comments"
+    "# SW: good"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -145,7 +141,7 @@
        "23"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,10 +162,41 @@
     "    else:                      # Otherwise, c is the largest.\n",
     "        return c\n",
     "    \n",
-    "max_of_three(10,22,23)     # Print the maximum among them.\n",
-    "\n",
-    "# SW: you only need three comparisons: a to b, a to c, and b to c. you can use conditional logic for the rest.\n",
-    "# lost points: missing doc header comments"
+    "max_of_three(10,22,23)     # Print the maximum among them."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# question 4.   \n",
+    "# We define a function to computes the length of a given list or string.\n",
+    "def mylen(a):    \n",
+    "    '''\n",
+    "    In this function, I use the recuesion method to calculate the length of the string.\n",
+    "    That is, to count the number of the characters one by one.\n",
+    "    '''\n",
+    "    if a == '':     #If string a is null, so just return 0 to say the length of a is 0.\n",
+    "        return 0\n",
+    "    else:        # If string a is not a null, we can calculate the len one by one. (use the recursion)\n",
+    "        return 1 + mylen(a[1:]) \n",
+    "    \n",
+    "mylen(\"de dede\")    # Try to test mylen() function."
    ]
   },
   {
@@ -182,47 +209,10 @@
     {
      "data": {
       "text/plain": [
-       "7"
+       "False"
       ]
      },
      "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# question 4.   \n",
-    "# We define a function to computes the length of a given list or string.\n",
-    "def mylen(a):    \n",
-    "'''\n",
-    "In this function, I use the recuesion method to calculate the length of the string.\n",
-    "That is, to count the number of the characters one by one.\n",
-    "\n",
-    "'''\n",
-    "    if a == '':     #If string a is null, so just return 0 to say the length of a is 0.\n",
-    "        return 0\n",
-    "    else:        # If string a is not a null, we can calculate the len one by one. (use the recursion)\n",
-    "        return 1 + mylen(a[1:]) \n",
-    "    \n",
-    "mylen(\"de dede\")    # Try to test mylen() function.\n",
-    "\n",
-    "# SW: lost points: missing doc header comments"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,8 +235,7 @@
     "    \n",
     "myVol('j')   # Try to test myVol() function. (use 'j' to test)\n",
     "\n",
-    "# SW: nice use of lower() to deal with case sensitivity.\n",
-    "# lost points: missing doc header comments"
+    "# SW: nice use of lower() to deal with case sensitivity."
    ]
   },
   {
@@ -300,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -311,7 +300,7 @@
        "14"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,14 +323,12 @@
     "    return sum      # Print the sum of all the numbers in the list.\n",
     "        \n",
     "        \n",
-    "sum([1,3,4,6])      # Try to test sum() function. (use [1,3,4,6] to test)\n",
-    "\n",
-    "# SW: lost points: missing doc header comments\n"
+    "sum([1,3,4,6])      # Try to test sum() function. (use [1,3,4,6] to test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -352,7 +339,7 @@
        "72"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,14 +362,12 @@
     "    return pro            # Print the product of all the numbers in the list.\n",
     "        \n",
     "        \n",
-    "multiply([1,3,4,6])     # Try to test multiply() function. (use [1,3,4,6] to test)\n",
-    "\n",
-    "# SW: lost points: missing doc header comments"
+    "multiply([1,3,4,6])     # Try to test multiply() function. (use [1,3,4,6] to test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -393,7 +378,7 @@
        "'gnitset ma I'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,14 +400,12 @@
     "        i = i-1\n",
     "    return c        # Print the reversal string c.\n",
     "\n",
-    "reverse(\"I am testing\")      # Try to test reverse() function. (use \"I am testing\" to test)\n",
-    "\n",
-    "# SW: lost points: missing doc header comments"
+    "reverse(\"I am testing\")      # Try to test reverse() function. (use \"I am testing\" to test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -433,7 +416,7 @@
        "True"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,14 +441,12 @@
     "    else:\n",
     "        return False      # If c differs from a, then it is not a palindrome, print 'False'.\n",
     "    \n",
-    "is_palindrome(\"radar\")     # Try to test is_palindrome() function. (use \"radar\" to test)\n",
-    "\n",
-    "# SW: lost points: missing doc header comments"
+    "is_palindrome(\"radar\")     # Try to test is_palindrome() function. (use \"radar\" to test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -476,7 +457,7 @@
        "False"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,14 +480,12 @@
     "        i += 1\n",
     "    return c            # Print c, that is get the answer.\n",
     "\n",
-    "is_member(3,[9,5,7,0,9])    # Try to test is_member() function. (use value 3 & list of value [9,5,7,0,9] to test)\n",
-    "\n",
-    "# SW: lost points: missing doc header comments"
+    "is_member(3,[9,5,7,0,9])    # Try to test is_member() function. (use value 3 & list of value [9,5,7,0,9] to test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -517,7 +496,7 @@
        "True"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -542,14 +521,12 @@
     "    return c                   # Print the answer.          \n",
     "\n",
     "overlapping([1,2,5,8],[3,6,7,5,0,9,10,3])     \n",
-    "# Try to test overlapping() function. (use list [1,2,5,8] & list [3,6,7,5,0,9,10,3] to test)\n",
-    "\n",
-    "# SW: lost points: missing doc header comments         "
+    "# Try to test overlapping() function. (use list [1,2,5,8] & list [3,6,7,5,0,9,10,3] to test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -560,7 +537,7 @@
        "'iii'"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,8 +560,7 @@
     "\n",
     "generate_n_chars(3,\"i\")    # Try to test generate_n_chars() function. ( to test by generating \"i\" (in) 3 times)\n",
     "\n",
-    "# SW: nice implementation\n",
-    "# lost points: missing doc header comments"
+    "# SW: nice implementation"
    ]
   },
   {
